# installer

./: .gitignore  Cargo.toml  Packager.toml  README.md
src/: cli.rs  config.rs  installer.rs  lib.rs  main.rs  packager.rs  utils.rs  version.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: config_test.rs  version_test.rs
