[package]
name = "seesea-installer"
version = "1.0.0"
edition = "2024"
description = "SeeSea Self-Contained Installer"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_extra = "1.3"
sysinfo = "0.30"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
walkdir = "2.5"
zip = "0.6"
zstd = "0.13.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.50"



[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
cargo-packager = "0.10"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "seesea-installer"
path = "src/main.rs"

# 确保Windows应用程序使用控制台子系统
[target.'cfg(windows)'.runner]
args = ["--console"]
[package.metadata.packager]
name = "SeeSea Installer"
description = "SeeSea Self-Contained Installer"
version = "1.0.0"
authors = ["SeeSea Team"]
resources = ["../building", "../install.toml"]



