[package]
name = "seesea-installer"
version = "1.0.0"
edition = "2024"
description = "SeeSea Self-Contained Installer"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
fs_extra = "1.3"
sysinfo = "0.30"
anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
walkdir = "2.5"
zip = "0.6"
zstd = "0.13.3"
chrono = "0.4"
reqwest = { version = "0.12", features = ["blocking", "json"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.50"



[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
cargo-packager = "0.10"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "seesea-installer"
path = "src/main.rs"


[package.metadata.packager]
name = "SeeSea Installer"
description = "SeeSea Self-Contained Installer"
version = "1.0.0"
authors = ["SeeSea Team"]
resources = ["../building", "../install.toml"]
icons = ["../static/image/img.png"]

[package.metadata.packager.windows]
format = "nsis"
nsis = {
    display_language = "SimpChinese",
    license = "../LICENSE",
    icon = "../static/image/img.ico",
    uninstaller_icon = "../static/image/img.ico",
    header_icon = "../static/image/img.ico",
    installer_icon = "../static/image/img.ico",
    uninstaller_header_icon = "../static/image/img.ico",
    compression = "lzma",
    unicode = true,
    multi_user = true,
    allow_skip_page = true,
    allow_reboot = false,
    create_desktop_shortcut = true,
    create_start_menu_shortcut = true,
    add_to_path = true
}

[package.metadata.packager.macos]
format = "dmg"
dmg = {
    icon = "../static/image/img.icns",
    background = "../static/image/dmg_background.png",
    window = {
        width = 800,
        height = 600
    },
    contents = [
        {
            x = 100,
            y = 100,
            type = "file",
            path = "target/release/seesea-installer"
        },
        {
            x = 700,
            y = 100,
            type = "link",
            path = "/Applications"
        }
    ]
}

[package.metadata.packager.linux]
format = "deb"
deb = {
    depends = ["python3", "python3-pip", "libssl3"],
    section = "utils",
    priority = "optional",
    maintainer = "SeeSea Team",
    homepage = "https://github.com/nostalgiatan/SeeSea",
    license = "Apache-2.0",
    compression = "xz",
    desktop_entries = ["../static/desktop/seesea-installer.desktop"]
}




